--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
 
+
+body {
+    background-color: rgb(216, 211, 204);
+    height: 100vh;
+    width: 100vw;
+}
+
+
+.footnote{
+    font-family: Tahoma, Futura, Arial, Helvetica, sans-serif;
+    color: rgb(255, 255, 255);
+    margin: 70px;
+    text-align: center;
+}
+
 .webpage {
     
     display: grid;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgb(216, 211, 204);
+    margin: 100px;
+    
     justify-content: center;
     align-content: center;
     grid-template-columns: 500px;
@@ -33,7 +47,7 @@
     height: 50%;
     border-radius: 15px;
     border-color: rgb(78, 78, 78);
-    background-color:rgb(199, 198, 198);
+    background-color:rgb(230, 230, 230);
     
 }
 
@@ -44,6 +58,11 @@
     align-items: center;
     justify-content: end;
     padding: 10px;
+    max-width: 368.97px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow:clip;
+  
 }
 
 .monitorBot {
@@ -54,6 +73,10 @@
     justify-content: end;
     padding: 10px;
     font-weight: bolder;
+    max-width: 368.97px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: clip;
 }
 
 .keypad {
@@ -63,55 +86,31 @@
 
 .calcBody {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     margin: 0% 8% 8% 8%;
     row-gap: 8px;
     column-gap: 8px;
     
-
-}
-.operators {
-    display: grid;
-
-   
-    grid-template-columns: repeat(5, auto);
-    row-gap: 8px;
-    column-gap: 8px;
-    grid-template-rows: auto;
-    height: auto;
-    grid-column-start: 1;
-    grid-column-end: 4;
     
+
 }
 
 
 
 
-.operators div {
+
+button {
     display: grid;
     border-style:solid;
     border-color: rgb(78, 78, 78);
     justify-content: center;
     align-items: center;
-    font-weight:bold;
-    font-size: x-large;
+    font-weight:normal;
+    font-size:xx-large;
     border-radius: 8px;
     background-color: white;
-    max-height: 69.5px;
-   
-}
-
-
-.number {
-    display: grid;
-    border-style:solid;
-    border-color: rgb(78, 78, 78);
-    justify-content: center;
-    align-items: center;
-    font-weight:bold;
-    font-size:larger;
-    border-radius: 8px;
-    background-color: white;
+    font-family: "Lucinda Console", monospace;
+    
 }
 
 .equal {
@@ -124,10 +123,22 @@
     justify-content: center;
     align-items: center;
     font-size:x-large;
-    font-weight: bold;
-    
+    font-weight: bolder;
+    grid-row-start: 4;
+    grid-row-end: 6;
+    grid-column-start: 4;
+    grid-column-end: 5;
 }
-.clear {
+
+.number0 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+
+}
+
+
+
+.clearAll {
     display: grid;
     border-style:solid;
     border-color: rgb(78, 78, 78);
@@ -139,5 +150,19 @@
     font-size:x-large;
     font-weight: bold;
     color:maroon;
+}
+
+.clearEntry {
+    color:navy;
+    font-size:x-large;
+    font-weight: bold;
+}
+
+.clicked {
+    background-color:rgb(192, 191, 191);
+    transition-duration: 0.1s;
+    box-shadow: rgb(53, 52, 52);
+
+    
 }
 
